--- a/css/blocks/_main.scss
+++ b/css/blocks/_main.scss
@@ -13,6 +13,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
   font-family: "Lato", sans-serif;
