--- a/css/blocks/_products.scss
+++ b/css/blocks/_products.scss
@@ -117,12 +117,17 @@
 
 .product-catalog-desc-wrap {
   padding: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 161px;
   & > a {
+    /* min-height: 30px; */
     text-decoration: none;
     color: #000000;
     /* cursor: pointer; */
     display: inline-block;
-    height: 0px;
+    /* height: 0px; */
     & > h3:hover {
       color: $main-color;
     }
@@ -156,5 +161,11 @@
   overflow: hidden;
   &:hover {
     transform: scale(1.1);
+    padding-left: 20px;
+  }
+  @media (max-width:$mobile-bp) {
+    &:hover {
+      padding-left: 40px;
+    }
   }
 }
